# teleporto

./: Cargo.toml  package.json  pnpm-lock.yaml
src/: App.svelte  main.rs  readfile.rs  sender.rs  tcpclient.rs  tcpserver.rs  webserver.rs  window.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  webserver.rs
src/lib/: Button.svelte  FileInput.svelte  Input.svelte
