[package]
name = "dnd_p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
eframe = "0.27.2"
env_logger = "0.11.3"
home = "0.5.9"
log = "0.4.21"
rfd = "0.14.1"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
